--- a/src/app/components/feedback/feedback.component.css
+++ b/src/app/components/feedback/feedback.component.css
@@ -1,10 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-
 .background {
   background-image: url("../../../assets/bg3.jpg");
   background-size: auto;
   background-repeat: repeat;
   opacity: 0.5;
+}
+
+.sample1 {
+  font-family: "Lato", sans-serif;
+}
+.sample2 {
+  font-family: "Noto Sans", sans-serif;
 }
 @keyframes fadeIn {
   from {
