--- a/src/app/components/dashboard/dashboard-main/dashboard-main.component.html
+++ b/src/app/components/dashboard/dashboard-main/dashboard-main.component.html
@@ -118,11 +118,12 @@
             <i class="fas fa-clock-rotate-left text-xs"></i>
             Due Today
           </span>
-          <button
+          <a
+            [routerLink]="['/feedback']"
             class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition-colors duration-150"
           >
             Provide Feedback
-          </button>
+          </a>
         </div>
       </div>
     </div>
@@ -148,11 +149,12 @@
             <i class="fas fa-clock-rotate-left text-xs"></i>
             Due in 3 days
           </span>
-          <button
+          <a
+            [routerLink]="['/feedback']"
             class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition-colors duration-150"
           >
             Provide Feedback
-          </button>
+          </a>
         </div>
       </div>
     </div>
@@ -178,11 +180,12 @@
             <i class="fas fa-clock-rotate-left text-xs"></i>
             Due next week
           </span>
-          <button
+          <a
+            [routerLink]="['/feedback']"
             class="px-4 py-2 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition-colors duration-150"
           >
             Provide Feedback
-          </button>
+          </a>
         </div>
       </div>
     </div>
